--- a/datahub-ui/test/index.html
+++ b/datahub-ui/test/index.html
@@ -9,19 +9,10 @@
 
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.js"></script>
   <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
-  <script src="../src/datahub-utils.js"></script>
-  <script src="../src/datahub-palette.js"></script>
-  <script src="../src/datahub-data.js"></script>
-  <script src="../src/datahub-map.js"></script>
-  <script src="../src/datahub-common.js"></script>
-  <script src="../src/datahub-widget.js"></script>
-  <script src="../src/datahub-group.js"></script>
-  <script src="../src/datahub-chart.js"></script>
-  <script src="../src/datahub-table-chart.js"></script>
-  <script src="../src/datahub-vertical-chart.js"></script>
-  <script src="../src/datahub-waterfall-chart.js"></script>
+  <script src="../dist/datahub.js"></script>
 
   <link rel="stylesheet" href="../style/components.css" />
   <link rel="stylesheet" href="../style/dark-theme.css" />
